add now playing status bar

--- a/projects/style.css
+++ b/projects/style.css
@@ -17,3 +17,8 @@
         width: 150px;
         border:none;
     }
+    #song-info {
+        position: absolute;
+        top: 50px;
+        left: 800px;
+    }
